# GetSMART

./: Cargo.toml  README.md
include/: getsmart.h
src/: error.rs  ffi.rs  lib.rs  main.rs  model.rs
src/platform/: linux.rs  mod.rs  windows.rs
src/protocol/: ata.rs  mod.rs  nvme.rs
tests/: integration.rs
