[package]
name = "GetSMART"
version = "0.1.0"
edition = "2024"

[lib]
name = "getsmart"
crate-type = ["rlib", "cdylib"]

[dependencies]
hex = "0.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Nvme",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }
